# vx-ace-shortcuts-override

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  README_pl.md  build.rs
.github/workflows/: build-and-release.yml
dll-lib/: Cargo.toml
dll-lib/src/: lib.rs
res/: splash.rc
src/: app.rs  lib.rs  main.rs
