[package]
name = "at-vxa-shortcuts-override"
version = "0.1.0"
edition = "2021"
authors = ["Axer/TheDarkAxer/Primekick <thetrueaxer@gmail.com>"]

[lib]
crate-type = ["cdylib"]
name = "at_vxa_so"
path = "src/lib.rs"

[[bin]]
name = "vxa_shortcuts_override"
path = "src/main.rs"

[dependencies]
dll-syringe = "0.15.2"
winapi-easy = "0.1.0"
winapi = { version = "0.3.9", features = ["winuser"] }
winreg = "0.50.0"
anyhow = "1.0.72"
nwg = { version = "^1.0.12", package = "native-windows-gui" }
native-windows-derive = "1.0.3"
directories = "5.0.1"
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
current_locale = "0.1.1"

[build-dependencies]
embed-manifest = "1.3.1"
